--- a/page.htlm/page.html
+++ b/page.htlm/page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>cotation introduire une date</h3>
-    <div id="date"></div>
+    <div id="dateid"></div>
     <script src="date.js"></script>
     
 </body>
